--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 
 @import url('./componentsStyle/Header.css');
+@import url('./componentsStyle/Footer.css');
 
 *{
     padding: 0;
@@ -17,3 +18,4 @@ a{
 body{
     height: 1000px;
 }
+
