--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 
 @import url('./componentsStyle/Header.css');
 @import url('./componentsStyle/Footer.css');
+@import url('./componentsStyle/Home.css');
 
 *{
     padding: 0;
