--- a/src/componentsStyle/Header.css
+++ b/src/componentsStyle/Header.css
@@ -4,17 +4,12 @@ header{
     align-items: center;
     justify-content: space-between;
     
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    
     width: 100%;
-    max-width: 1000px;
 
     margin: 0 auto;
     padding: 5px 20px;
     border-bottom: 1px solid rgba(111, 111, 111, 0.215);
+    background-color: white;
 }
 
 header > a > img{
@@ -29,7 +24,7 @@ header > .nav-window{
 
 header > .nav-window > a{
     position: relative;
-    font-size: 14px;
+    font-size: 15px;
     color: rgb(33, 28, 23);
 }
 header > .nav-window > a:hover{
@@ -159,4 +154,11 @@ header > .menuBtn > img{
 .nav-mobile-container > button:hover{
     background-color: rgb(235, 150, 24);
     color: rgb(37, 37, 37);
+}
+
+
+@media (max-width: 950px) {
+    header > .nav-window > a{
+        font-size: 14px;
+    }
 }
